# py-dynamic-protobuf

./: .gitignore  README.md  pyproject.toml
dynamic_protobuf/: __init__.py  any.py  constants.py  decoder.py  encoder.py  imports.py  parser.py  parser_classes.py  protobuf_definition.py  protobuf_definition_types.py  protobuf_instance.py
minimal_protobuf/: __init__.py  constants.py  decoder.py  deserializer.py  encoder.py  serializer.py
tests/unit/: test_decoder.py  test_deserializer.py  test_encoder.py  test_parser.py  test_parser_proto2.py  test_serializer.py
tests/unit/imports/: custom_import.proto  extension.proto  other_import.proto  public_import.proto
