[tool.poetry]
name = "py-dynamic-protobuf"
version = "1.0.1"
description = "A Protobuf implementation for Python which can be used to dynamically create messages and encode/decode them to and from binary."
authors = ["Bas Philippus <bas.philippus@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dynamic_protobuf", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
mypy = "*"
isort = "*"
flake8 = "*"
tox-pipenv = "*"
autoflake = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"